--- a/Manual/The Hypercolor.html
+++ b/Manual/The Hypercolor.html
@@ -1,17 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>The Hypercolor — Keep Talking and Nobody Explodes Module</title>
     <meta name="viewport" content="initial-scale=1">
+    <title>The Hypercolor — Keep Talking and Nobody Explodes Module</title>
+    <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/font.css">
     <script src="js/ktane-utils.js"></script>
 </head>
 <body>
-    <div id="ManualContent">
         <div class="section">
             <div class="page page-bg-01">
                 <div class="page-header">
@@ -38,11 +36,10 @@
                     <h3>Rotating both cubes</h3>
                     <p>You cannot identify each vertex’s original color with only one state of the cubes.</p>
                     <p>Pressing the background will rotate each of the two cubes in a random direction. Get the color by rotating until you can identify the original color of each vertex.</p>
-                    <img style='margin-left: auto; margin-right: auto; display: block; width: 80%' src="img/Color Chart.png" />
+                    <img style='margin-left: auto; margin-right: auto; display: block; width: 80%' src="img/The Hypercolor/Color Chart.svg" />
                 </div>
                 <div class="page-footer relative-footer">Page 1 of 1</div>
             </div>
         </div>
-    </div>
 </body>
 </html>
